# prefect-horizon-story

./: .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  DEVELOPING.md  Makefile  ONPREM.md  README.md  main.py  package-lock.json  playwright-mcp.config.json.example  pyproject.toml
.github/workflows/: ci.yml  e2e.yml
chrome-extension/: DEVELOPING.md  biome.json  manifest.json
chrome-extension/prefect-app/: logic.js  logic.test.js  toolbar.css  toolbar.e2e.js  toolbar.js
chrome-extension/prefect-io/: chain-of-action.e2e.js  chain-of-action.js  horizon-workflows.js  horizon.js
examples/: ai_research.py  database_report.py  deploy_examples.py  hello_world.py  sales_report.py  web_to_markdown.py
src/adapter/: config.py  executor.py  provider.py  schema.py
tests/: conftest.py  test_config.py  test_discovery.py  test_executor.py  test_integration.py  test_live_flows.py  test_provider.py  test_schema.py
tests/flows/: math_flow.py
